--- a/blog.html
+++ b/blog.html
@@ -34,6 +34,20 @@
 	
 
 	<div class='entry'>
+	<p>4 17 2025</p>
+	<h2>day 3 : believe</h2>
+	<p>is belief the opposite of trying ? morale is a vital part of winning , and morale is largely belief . last week the canucks scored 3 points in the last one minute of regulation to tie up the game against dallas ; trailing by 3 with a minute left must feel like
+	a pretty hopeless situation , i mean , no nhl team had ever won in that situation . it's hard to imagine that the team didn't believe they could do it . they were definetly giving it their all in the last minute , but did they really believe
+	that they would win ? 
+<br><br>
+	all i know is that when your back is against the wall , belief only goes so far . what matters is that you do everything in your power to win . whether or not the canucks believed , they pushed as hard as possible . it seems that belief is not all it takes to win ,
+	but if you give up , then you might stop trying . trying is all it takes to win .
+	<br><br>
+	<img src='https://static1.squarespace.com/static/5266d49be4b0bc5cd29ee8e0/t/58a348395016e17b183b24cb/1487095869033/?format=1500w'>
+	</p>
+
+
+	<div class='entry'>
 	<p>4 15 2025</p>
 	<h2>day 1 : why ?</h2>
 	<p>hello . my name is evan stover . first things first : 
