--- a/blog.html
+++ b/blog.html
@@ -35,9 +35,8 @@
 	<div class='entry'>
 	<p>4 24 2025</p>
 	<h2>day 9 : hiccups</h2>
-	<p>well i just missed about 7 days of job searching ... i guess i am a lazy bastard ... and i barely looked today . sometimes i wished i moved somewhere further than vancouver 
-	so i wouldn't have any relationships to upkeep , hard to say if that would be better or worse . anyways i love my familly and my friends , but ' looking for work ' is not a valid excuse compared to ' working ' . well i'm sure they would understand 
-	i just lack the confidence to tell them that .
+	<p>well i just missed about 7 days of job searching ... i guess i am a lazy bastard ... and i barely looked today . sometimes i wish i moved somewhere further , hard to say if that would be better or worse .
+	i love my family and my friends , but ' looking for work ' is not ' working ' . well i'm sure they would understand .
 	<br><br>
 	do you need confidence to work in advertising ? what is confidence ? i think thats a topic for another day .
 	</p>
