--- a/blog.html
+++ b/blog.html
@@ -31,6 +31,40 @@
 	<div class="content">
 		<br>   
 		<br>
+		
+	<div class='entry'>
+	<p>4 25 2025</p>
+	<h2>day 10 : cocooning</h2>
+	<p>as society has been moving towards the dreaded digital world , humans seem to be changing their behavior . now , i was born this century so i won't claim to be an expert on the change of society , but this is my blog so i will speak my mind god damn it .
+	I THINK : humans have historically been very reliant on each other , but in the 21st century , our reliance on humans is gradually being replaced with reliance on 
+	computers . gasp . 
+	<br><br>
+	ancient rome
+	<br><br>
+	the ancient romans seem to have had a fear of isolation , well from what i understand they weren't scared of being alone so much as they were weirded out by it . think about this , romans bathed together in communal baths . 
+	i am willing to bet most modern young people find the idea of public pools weird . let alone public baths . 
+	<br><br>
+	covid 19
+	<img src='https://upload.wikimedia.org/wikipedia/commons/thumb/7/74/Disordered_Otaku_room.jpg/250px-Disordered_Otaku_room.jpg'>
+	<br><br>
+	so somehow humans ( at least the ones that went from italy to north america in the last 2000 years ) have gone from finding isolation weird to finding community weird . and i argue it is due to technology . ex : before smart phones
+	people had to ask another person for directions ; this sort of daily interaction and trust in the general public has been slowly removed from our lives due to technology . one of the main strategies in stopping the spread of the legendary coronavirus was to
+	' self isolate ' .
+	even if only 50% of people were isolating from other humans , it seems likely that during the pandemic humanity reached a new peak of isolation . self checkouts , digital meetings , emails , examples of digital solutions ,
+	use of which was dramatically increased during and continues after the pandemic .
+	<br><br>
+	as i see it : humans have been gradually moving towards a less communal lifestyle , the covid 19 pandemic accelerated that process , and now we are in a world that is possibly more digital than any of realize . 
+	<br><br>
+	the future
+	<br><br>
+	i see two possible futures for this topic , one : humans slowly adapt to the new norm , and once we catch up to the accelerated speed of social digitization , we learn to enjoy it and maybe keep going down this path ( individual ) . 
+	two : proactive voices of humanity protest against the paradigm and argue for a more analog society , this leads to a change of lifestyle to one that is both futurisitc and traditional ( communal and individual ) . okay why not theorize a third communal only
+	future . three : there is a great divide between those believing in individuality ( the individualists ) and communality ( the communalists ) . people begin to fall into one of two camps , and they refuse to acknowledge eachothers views . this leads to nuclear war
+	, and humanity is reduced to a few small communities that are forced to rely on eachother in the absense of technology ( communal ) .
+	
+	</p>
+	</div>	
+	
 	
 	<div class='entry'>
 	<p>4 24 2025</p>
@@ -40,7 +74,7 @@
 	<br><br>
 	do you need confidence to work in advertising ? what is confidence ? i think thats a topic for another day .
 	</p>
-
+	</div>
 
 
 	<div class='entry'>
