--- a/blog.html
+++ b/blog.html
@@ -44,23 +44,12 @@
 	the ancient romans seem to have had a fear of isolation , well from what i understand they weren't scared of being alone so much as they were weirded out by it . think about this , romans bathed together in communal baths . 
 	i am willing to bet most modern young people find the idea of public pools weird . let alone public baths . 
 	<br><br>
-	covid 19
 	<img src='https://upload.wikimedia.org/wikipedia/commons/thumb/7/74/Disordered_Otaku_room.jpg/250px-Disordered_Otaku_room.jpg'>
 	<br><br>
-	so somehow humans ( at least the ones that went from italy to north america in the last 2000 years ) have gone from finding isolation weird to finding community weird . and i argue it is due to technology . ex : before smart phones
-	people had to ask another person for directions ; this sort of daily interaction and trust in the general public has been slowly removed from our lives due to technology . one of the main strategies in stopping the spread of the legendary coronavirus was to
-	' self isolate ' .
-	even if only 50% of people were isolating from other humans , it seems likely that during the pandemic humanity reached a new peak of isolation . self checkouts , digital meetings , emails , examples of digital solutions ,
-	use of which was dramatically increased during and continues after the pandemic .
+	but now being alone is romantisized . it is seen as stoic and desireable . partying is increasingly frowned upon , and working from home is coveted . i want to work in an office , and i want to go party . but i'm still applying
+	to jobs using this glowing box in my room .
 	<br><br>
-	as i see it : humans have been gradually moving towards a less communal lifestyle , the covid 19 pandemic accelerated that process , and now we are in a world that is possibly more digital than any of realize . 
-	<br><br>
-	the future
-	<br><br>
-	i see two possible futures for this topic , one : humans slowly adapt to the new norm , and once we catch up to the accelerated speed of social digitization , we learn to enjoy it and maybe keep going down this path ( individual ) . 
-	two : proactive voices of humanity protest against the paradigm and argue for a more analog society , this leads to a change of lifestyle to one that is both futurisitc and traditional ( communal and individual ) . okay why not theorize a third communal only
-	future . three : there is a great divide between those believing in individuality ( the individualists ) and communality ( the communalists ) . people begin to fall into one of two camps , and they refuse to acknowledge eachothers views . this leads to nuclear war
-	, and humanity is reduced to a few small communities that are forced to rely on eachother in the absense of technology ( communal ) .
+	yeah i'm just venting lol .
 	
 	</p>
 	</div>	
