--- a/blog.html
+++ b/blog.html
@@ -33,6 +33,16 @@
 		<br>
 		
 	<div class='entry'>
+	<p>4 30 2025</p>
+	<h2>day 15 : nothing to report </h2>
+	<p>
+	15 days have passed since i started this blog . i've already run out of things to say , and nothing new has happened . i guess i'll run you through my daily routine for job searching so you can know what not to do . <br><br>
+	i use a program i made called <a href='https://xerelia.ca/punk'>punk records</a> as a central base for online operations . in punk records i have a bookmark group filled with job boards where i might find some work . i basically just check those everyday
+	apply for any new ones and then usually try and reach out to some people . so far this has lead to no interviews . 
+	</p>
+	<div>
+		
+	<div class='entry'>
 	<p>4 25 2025</p>
 	<h2>day 10 : cocooning</h2>
 	<p>as society has been moving towards the dreaded digital world , humans seem to be changing their behavior . now , i was born this century so i won't claim to be an expert on the change of society , but this is my blog so i will speak my mind god damn it .
