--- a/blog.html
+++ b/blog.html
@@ -31,7 +31,24 @@
 	<div class="content">
 		<br>   
 		<br>
-		
+	
+	<div class='entry'>
+	<p>5 1 2025</p>
+	<h2>day 16 : ideas</h2>
+	<p>
+	for me , the worst part of being unemployed is all the ideas i have . i wish i could dedicate my creative thinking to a cause , be it my personal outlets or a workplace i am sworn to . unfortunately without a job , my brain is dedicated to one master : money .<br><br>
+	i can't help but come up with stupid money making schemes , realistic or not . ex : i realized sports cars tend to go down in value for 15 years or so after their release , and typically shoot up to more expensive then new after 30 years or so . thus i decided
+	i just need to buy 10 2007 aston martin vanquish s's and sell them in 15 years , then i'd make at least $500,000 . <img alt='green 2007 aston martin vanquish' src='https://www.bramley.com/blobs/carsales/images/p1040674_10585.jpg?bgcolor=fff'> i don't think i need to begin explaining all the reasons i cannot and should not do this .
+	<br><br>
+	but this latest idea might have some merit . see i make an effort to make each and every email i send completely unique . i hope it comes accross to potential employers that i am not a robot , nor am i copy pasting my applications a hundred times a day . 
+	yet upon consideration i doubt they notice ( it's rather hard to shoehorn in enough company specific info to dispell the notion the email might be copy paste ) . at this point i've probably written 100 or more unique emails , each one with a unique position .
+	so : what if i made a program that takes prompts for company name , hiring manager name , and a line about why i'm a good fit . then it could apply that info to one of the hundred emails i've written , and spit out an email for me to copy paste ! ideas ideas ideas
+	<br><br>
+	i'm going to watch thunderbolts tonight
+	</p>
+	</div>
+
+	
 	<div class='entry'>
 	<p>4 30 2025</p>
 	<h2>day 15 : nothing to report </h2>
@@ -54,7 +71,7 @@
 	the ancient romans seem to have had a fear of isolation , well from what i understand they weren't scared of being alone so much as they were weirded out by it . think about this , romans bathed together in communal baths . 
 	i am willing to bet most modern young people find the idea of public pools weird . let alone public baths . 
 	<br><br>
-	<img src='https://upload.wikimedia.org/wikipedia/commons/thumb/7/74/Disordered_Otaku_room.jpg/250px-Disordered_Otaku_room.jpg'>
+	<img alt='disordered room' src='https://upload.wikimedia.org/wikipedia/commons/thumb/7/74/Disordered_Otaku_room.jpg/250px-Disordered_Otaku_room.jpg'>
 	<br><br>
 	but now being alone is romantisized . it is seen as stoic and desireable . partying is increasingly frowned upon , and working from home is coveted . i want to work in an office , and i want to go party . but i'm still applying
 	to jobs using this glowing box in my room .
@@ -85,7 +102,7 @@
 	all i know is that when your back is against the wall , belief only goes so far . what matters is that you do everything in your power to win . whether or not the canucks believed , they pushed as hard as possible . it seems that belief is not all it takes to win ,
 	but if you give up , then you might stop trying . trying is all it takes to win .
 	<br><br>
-	<img src='https://media.video-cdn.espn.com/motion/2025/0409/ss_20250408_224339767_283145419/ss_20250408_224339767_283145419_default.jpg'>
+	<img alt='keifer sherwood celebrating' src='https://media.video-cdn.espn.com/motion/2025/0409/ss_20250408_224339767_283145419/ss_20250408_224339767_283145419_default.jpg'>
 	</p>
 
 
@@ -110,7 +127,7 @@
 	<br><br>
 	well that pretty much sums up why i'm starting this blog and what its about . i'll try and update it with my stuggles and successes as they come , and maybe this will help you in some way. peace .
 	<br><br>
-	<img src='https://static1.squarespace.com/static/5266d49be4b0bc5cd29ee8e0/t/58a348395016e17b183b24cb/1487095869033/?format=1500w'>
+	<img alt= 'vancouver public library' src='https://static1.squarespace.com/static/5266d49be4b0bc5cd29ee8e0/t/58a348395016e17b183b24cb/1487095869033/?format=1500w'>
 	<br><br>
 	published on april fifteenth two thousand twenty five aka right now ( for me )
 	
