--- a/blog.html
+++ b/blog.html
@@ -31,6 +31,42 @@
 	<div class="content">
 		<br>   
 		<br>
+		
+
+	<div class='entry'>
+	<p>5 6 2025</p>
+	<h2>day 21.5 : tools</h2>
+	<p>
+	just came back to let all my amazing readers know that i made the tool i was talking about . its not really as i described and i got chat gpt to do a bit of writing . ill probably work on it but for now its alright . <br><br>
+	check it out here → <a href='madletter.html'>madletter</a>
+	</p>
+		
+	<div class='entry'>
+	<p>5 6 2025</p>
+	<h2>day 21 : data</h2>
+	<p>
+	i met with Laura Larson last week . we had a nice chat and she gave me some tips for finding work . today she texted me with a job posting for a social media assitant at translink ( the transit authority in vancouver ) . 
+	<br><br>
+	for the sake of transparency , i'll share the cover letter i wrote them :
+	</p>
+	<div class='blockquote'>
+	"Hello TransLink Team,<br><br> My name is Evan Stover, and I'm very interested in the assistant-social media and digital position at TransLink.
+	<br><br>I've spent the past four years studying advertising at university, and for the past year I've also been working as a freelance advertiser. During this time, I've developed my skills in writing, strategy, design and production.
+	<br><br>As a transit user, cyclist, and pedestrian, this seems like an excellent opportunity to combine my day-to-day experience with the content creation skills I have learned -  and to ultimately create meaningful communications.
+	<br><br>My resume follows below, which includes a link to my portfolio (esadvertising.ca), where you can find examples of both university and freelance work.
+	<br><br>Thank you very much for your time and consideration.
+	<br><br>Evan Stover"
+	</div>
+	<p>
+	i often doubt my own qualifications , thinking im not qualified enough to work as a professional in anything aside from service or labour ; while that is probably true , reading my cover letter makes me feel more qualified . 
+	i don't really understand what a cover letter is supposed to be , but it kindof just feels like making an argument . starting with an argument sounds like a bad plan to get a job lol . <br><br>
+	
+	anyways i've applied to plenty of positions like this , but it's nice that Laura sent it my way . i'm thinking i should log more of my daily applications in this blog , to keep track of my applications and quality of my cover letters .
+	<br><br>
+
+	i'm not sure why i can't keep this blog consistent . 
+	</p>
+	</div>
 	
 	<div class='entry'>
 	<p>5 1 2025</p>
@@ -38,7 +74,7 @@
 	<p>
 	for me , the worst part of being unemployed is all the ideas i have . i wish i could dedicate my creative thinking to a cause , be it my personal outlets or a workplace i am sworn to . unfortunately without a job , my brain is dedicated to one master : money .<br><br>
 	i can't help but come up with stupid money making schemes , realistic or not . ex : i realized sports cars tend to go down in value for 15 years or so after their release , and typically shoot up to more expensive then new after 30 years or so . thus i decided
-	i just need to buy 10 2007 aston martin vanquish s's and sell them in 15 years , then i'd make at least $500,000 . <img alt='green 2007 aston martin vanquish' src='https://www.bramley.com/blobs/carsales/images/p1040674_10585.jpg?bgcolor=fff'> i don't think i need to begin explaining all the reasons i cannot and should not do this .
+	i just need to buy 10 2007 aston martin vanquish s's and sell them in 15 years , then i'd make at least $500,000 . <img alt='green 2007 aston martin vanquish' src='https://www.bramley.com/blobs/carsales/images/p1040674_10585.jpg?bgcolor=fff'> i don't think i need to explain why i shouldn't do this lol .
 	<br><br>
 	but this latest idea might have some merit . see i make an effort to make each and every email i send completely unique . i hope it comes accross to potential employers that i am not a robot , nor am i copy pasting my applications a hundred times a day . 
 	yet upon consideration i doubt they notice ( it's rather hard to shoehorn in enough company specific info to dispell the notion the email might be copy paste ) . at this point i've probably written 100 or more unique emails , each one with a unique position .
@@ -85,8 +121,7 @@
 	<div class='entry'>
 	<p>4 24 2025</p>
 	<h2>day 9 : hiccups</h2>
-	<p>well i just missed about 7 days of job searching ... i guess i am a lazy bastard ... and i barely looked today . sometimes i wish i moved somewhere further , hard to say if that would be better or worse .
-	i love my family and my friends , but ' looking for work ' is not ' working ' . well i'm sure they would understand .
+	<p>well i just missed about 7 days of job searching ... i guess i am a lazy bastard ... and i barely looked today . i wonder what would have happened if i had moved elsewhere . hong kong ? the uk ? i guess i can always try that one day .
 	<br><br>
 	do you need confidence to work in advertising ? what is confidence ? i think thats a topic for another day .
 	</p>
