--- a/madletter.html
+++ b/madletter.html
@@ -5,7 +5,7 @@
         <title>madletter</title>
         <meta name="keywords" content="generate a quality cover letter in seconds">
         <meta name="description" content="a tool that uses simple word replacement to generate a cover letter with minimal information">
-		<meta name="og:title" property="og:title" content="freelance programmer-copywriter in vancouver">
+		<meta name="og:title" property="og:title" content="generate a quality cover letter in seconds">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="icon" href="favicon.ico">
 		<meta charset="UTF-8">
