--- a/about.html
+++ b/about.html
@@ -8,6 +8,18 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="icon" href="favicon.ico">
     </head>
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-KMMVYLQQJT"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-KMMVYLQQJT');
+</script>
+	
+	
 <body>
     <div class="topbar">
     <p class="menubutton"  onclick="menu()"> 
