--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,19 @@
         <link rel="icon" href="favicon.ico">
     </head>
 <body>
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-KMMVYLQQJT"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-KMMVYLQQJT');
+</script>
     
+	
+	
     <div class="topbar">
     <p class="menubutton"  onclick="menu()"> 
      +  
