--- a/index.html
+++ b/index.html
@@ -10,8 +10,20 @@
         <link rel="icon" href="favicon.ico">
 		<meta charset="UTF-8">
     </head>
+	
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-KMMVYLQQJT"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-KMMVYLQQJT');
+</script>
+
 
     <body>
+
 	<div>
        
             <img src="logo2inv.png" alt="invisible ad&ad logo" style="max-height:20pt">
