--- a/madletter.html
+++ b/madletter.html
@@ -11,6 +11,16 @@
 		<meta charset="UTF-8">
     </head>
 	
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-KMMVYLQQJT"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-KMMVYLQQJT');
+</script>
+
 
 	
 	<body>
