--- a/contact.html
+++ b/contact.html
@@ -38,7 +38,7 @@
 
     <div class="contents content">
         <canvas id="funboard" style="position:fixed;left:0;top:0;z-index:-1;"></canvas>
-        <p class="header">contact us (if you want)</p>
+        <p class="header">contact us ! about anything !</p>
         <p class="bodytext">
         <br><br>
         through our company email <br> <a id='e' href="mailto:ee@adandad.ca">ee@adandad.ca</a> <br><br>or reach out to one of our junior employees<br>
